<resources>
    <string name="error1">Error, please retry to upload your image</string>
    <string name="errorDownloadingImage">Error while downloading an image </string>
    <string name="errorUploadingImage"> Error while uploading your image to firebase database, please Retry</string>
    <string name="success">Upload success to firebase database</string>
    <string name="noFile">No file selected, please retry</string>
    <string name="waitFor">Wait for</string>
    <string name="seconds">seconds</string>
    <string name="progress">Progress...</string>
    <string name="selectAction">Select between</string>
    <string name="likeAction">Like</string>
    <string name="deleteAction">Delete</string>
    <string name="editAction">Edit</string>
    <string name="errorImplementation">You must inplement the method OnButtonClickedListener please</string>
    <string name="fragment_detail_card_back_card"> Back card image</string>
    <string name="fragment_detail_card_cotation">8</string>
    <string name="fragment_detail_site">site</string>
    <string name="fragment_detail_card_star">2</string>
    <string name="fragment_detail_card_rank">1/200</string>
    <string name="fragment_detail_card_climbingrouteName">more beautiful than the sea</string>
    <string name="fragment_detail_card_tactical">tactical</string>
    <string name="fragment_detail_card_technical">technical</string>
    <string name="fragment_detail_card_mental">mental</string>
    <string name="fragment_detail_card_physical">physical</string>
    <string name="fragment_detail_card_back">back card</string>
    <string name="fragment_detail_card_background1">back card</string>
    <string name="fragment_detail_card_textview_name">site</string>
    <string name="fragment_detail_card_demi_right">demi right</string>
    <string name="fragment_detail_card_demi_left">demi left</string>
    <string name="fragment_detail_card_qrcode">qrcode</string>
    <string name="fragment_detail_card_level">level</string>
    <string name="fragment_detail_card_image">image</string>
    <string name="fragment_detail_card_name">card name</string>
    <string name="fragment_detail_card_android">card detail</string>
    <string name="fragment_detail_card_background2">background</string>
    <string name="fragment_detail_card_user">user</string>
    <string name="addPhoto">Please add a photo</string>
    <string name="takePhoto">Take a new photo</string>
    <string name="chosseLibrary">Chose from library</string>
    <string name="cancel">Cancel</string>
    <string name="selectImage">Select an Image</string>
    <string name="activity_card_list_button">test</string>
    <string name="app_name">ClimbingAndroid</string>
    <string name="title_activity_card">CardActivity</string>
    <string name="activity_new_climber_last_name">last name</string>
    <string name="activity_new_climber_first_name">first name</string>
    <string name="activity_new_climber_date">date</string>
    <string name="activity_new_climber_card_id">card_id</string>
    <string name="activity_new_climber_button_add">Add</string>
    <string name="activity_new_climber_button_back">Back</string>
    <string name="activity_new_climber_button_add_photo">Add photo</string>
    <string name="activity_new_climber_edit_text_enter_file_name">Enter file name</string>
    <string name="activity_new_climber_button_upload">Upload</string>
    <string name="activity_new_climber_button_show_upload">Show Images</string>
    <string name="activity_image_item_name">Name</string>
    <string name="activity_image_clickAction">Click Action at position: </string>
    <string name="activity_image_editAction">Edit Action at position: </string>
    <string name="activity_image_likeAction">Delete Action at position: </string>
    <string name="activity_image_deleteAction">Delete Action at position: </string>
    <string name="activity_climber_list_new_climber_menu">New climber</string>
    <string name="activity_climber_list_new_climber_title">Add new climber</string>
    <string name="activity_climber_detail_last_name">last name</string>
    <string name="activity_climber_detail_first_name">first name</string>
    <string name="activity_climber_detail_date">date</string>
    <string name="activity_climber_detail_card_id">card_id</string>
    <string name="activity_climber_detail_button_add">Add</string>
    <string name="activity_climber_detail_button_back">Back</string>
    <string name="activity_climber_detail_button_update">Update</string>
    <string name="activity_climber_detail_button_delete">Delete</string>
    <string name="activity_user_time">Time</string>
    <string name="a1">1</string>
    <string name="a2">2</string>
    <string name="a3">3</string>
    <string name="a4">4</string>
    <string name="a5">5</string>
    <string name="a6">6</string>
    <string name="activity_main_button_api">Api</string>
    <string name="activity_main_button_climber">Climber</string>
    <string name="activity_main_button_home">Home</string>
    <string name="activity_main_button_card">Card</string>
    <string name="activity_main_button_cartography">Maps</string>
    <string name="activity_main_button_friends">Friends</string>
    <string name="activity_main_button_create_card">Create a new Card</string>
    <string name="activity_main_button_url">Url</string>
    <string name="activity_main_button_user_profile">User Profile</string>
    <string name="activity_main_button_user_list">User List</string>
    <string name="activity_main_button_firebase">Firebase</string>
    <string name="activity_main_button_room">Room</string>
    <string name="activity_home_button_start">Start</string>
    <string name="activity_home_button_home">Home</string>
    <string name="activity_game_technical">Technical</string>
    <string name="activity_game_tactical">Tactical</string>
    <string name="activity_game_mental">Mental</string>
    <string name="activity_game_physical">Physical</string>
    <string name="activity_game_save">Save</string>
    <string name="acitvity_game_total">Total</string>
    <string name="activity_game_star">Star</string>
    <string name="activity_game_info">infos</string>
    <string name="activity_game_climbingroute_name">climbing route name:</string>
    <string name="activity_game_saving">Saving your new difficulty card</string>
    <string name="acivity_api_checkbox1"></string>
    <string name="textview">TextView</string>
    <string name="checkbox0">Image</string>
    <string name="checkbox1">Bonus</string>
    <string name="checkbox2">Infos</string>
    <string name="activity_url_button_test">Test</string>
    <string name="activity_card_textview_level">Level</string>
    <string name="activity_card_bottom_left_corner">Corner</string>
    <string name="activity_card_android"></string>
    <string name="activity_card_physical">Physical</string>
    <string name="activity_card_mental">Mental:</string>
    <string name="activity_card_tactical">Tactical</string>
    <string name="activity_card_technical">Technical:</string>
    <string name="activity_card_name"></string>
    <string name="activity_card_image"></string>
    <string name="activity_card_level"></string>
    <string name="activity_card_star"></string>
    <string name="activity_card_rank"></string>
    <string name="activity_card_demi_left"></string>
    <string name="activity_card_demi_right"></string>
    <string name="activity_card_top_right_corner"></string>
    <string name="activity_card_bottom_right_corner"></string>
    <string name="activity_card_back"></string>
    <string name="activity_card_textview_name"></string>
    <string name="activity_card_qrcode"></string>
    <string name="activity_card_top_leftt_corner"></string>
    <string name="acitvity_card_bonus">Bonus</string>
    <string name="activity_card_user">User</string>
    <string name="activity_card_background1"></string>
    <string name="activity_card_background2"></string>
    <string name="acitvity_card_technical_progress1"></string>
    <string name="acitvity_card_technical_progress2"></string>
    <string name="acitvity_card_technical_progress3"></string>
    <string name="acitvity_card_technical_progress4"></string>
    <string name="acitvity_card_technical_progress5"></string>
    <string name="acitvity_card_tactical_progress1"></string>
    <string name="acitvity_card_tactical_progress2"></string>
    <string name="acitvity_card_tactical_progress3"></string>
    <string name="acitvity_card_tactical_progress4"></string>
    <string name="acitvity_card_tactical_progress5"></string>
    <string name="acitvity_card_mental_progress1"></string>
    <string name="acitvity_card_mental_progress2"></string>
    <string name="acitvity_card_mental_progress3"></string>
    <string name="acitvity_card_mental_progress4"></string>
    <string name="acitvity_card_mental_progress5"></string>
    <string name="acitvity_card_physical_progress1"></string>
    <string name="acitvity_card_physical_progress2"></string>
    <string name="acitvity_card_physical_progress3"></string>
    <string name="acitvity_card_physical_progress4"></string>
    <string name="acitvity_card_physical_progress5"></string>
    <string name="activity_cartography_text_view_latitude">latitude</string>
    <string name="activity_cartography_text_view_longitude">longitude</string>
    <string name="activity_cartography_text_view_altitude">altitude</string>
    <string name="activity_cartography_text_view_adress">adress</string>
    <string name="activity_cartography_enable_gps">please enable gps to find your location</string>
    <string name="activity_cartography_input_city">City</string>
    <string name="activity_cartography_locate">locate</string>
    <string name="activity_friend_first_name"></string>
    <string name="activity_friend_last_name"></string>
    <string name="activity_friend_ask">Ask for friend</string>
    <string name="activity_photo_button_save">Save</string>
    <string name="fr">us</string>
    <string name="activity_recycler_user_button_new_user">Add</string>
    <string name="firebase_friend_button_Ask">Ask for friend</string>
    <string name="activity_friend_list_new_friend_menu">Add a new friend</string>
    <string name="activity_friend_detail_user_id">user_id</string>
    <string name="activity_user_first_name">Firstname</string>
    <string name="activity_user_last_name">Lastname</string>
    <string name="activity_user_birdthday">birthday</string>
    <string name="activity_user_email">email</string>
    <string name="activity_user_password">password</string>
    <string name="activity_user_postal_adress">postal address</string>
    <string name="activity_user_button_submit">Submit</string>
    <string name="numero1">1</string>
    <string name="numero2">2</string>
    <string name="numero3">3</string>
    <string name="numero4">4</string>
    <string name="numero5">5</string>
    <string name="numero6">6</string>
    <string name="numero7">7</string>
    <string name="numero8">8</string>
    <string name="numero9">9</string>
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_app_id">478529146396192</string>
    <string name="fb_login_protocol_scheme">fb478529146396192</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="activity_cartography_button_search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">notification</string>
</resources>