<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.CardActivity">


    <ImageView
        android:id="@+id/activity_card_back"
        android:layout_width="400dp"
        android:layout_height="730dp"
        android:contentDescription="@string/activity_card_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/carte_vide" />

    <TextView
        android:id="@+id/activity_card_textview_name"
        android:contentDescription="@string/activity_card_textview_name"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="40dp"
        android:text="Orpierre"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/activity_card_top_leftt_corner"
        android:contentDescription="@string/activity_card_top_leftt_corner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cuivre" />

    <ImageView
        android:id="@+id/activity_card_bottom_left_corner"
        android:contentDescription="@string/activity_card_bottom_left_corner"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="95dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/cuivre" />

    <ImageView
        android:id="@+id/activity_card_bottom_right_corner"
        android:contentDescription="@string/activity_card_bottom_right_corner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="95dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/cuivre" />

    <ImageView
        android:id="@+id/activity_card_top_right_corner"
        android:contentDescription="@string/activity_card_top_right_corner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cuivre" />


    <ImageView
        android:id="@+id/activity_card_demi_right"
        android:contentDescription="@string/activity_card_demi_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/demi_rond_droite" />

    <ImageView
        android:id="@+id/activity_card_demi_left"
        android:contentDescription="@string/activity_card_demi_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/demi_rond_gauche" />

    <ImageView
        android:id="@+id/activity_card_qrcode"
        android:contentDescription="@string/activity_card_qrcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_card_back"
        app:srcCompat="@drawable/qrcode" />

    <TextView
        android:id="@+id/activity_card_star"
        android:contentDescription="@string/activity_card_star"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:paddingLeft="10sp"
        android:paddingTop="12sp"
        android:text="3 *"
        android:textAlignment="center"
        android:textColor="#FC0101"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/activity_card_qrcode"
        app:layout_constraintTop_toTopOf="@+id/activity_card_demi_left" />

    <TextView
        android:id="@+id/activity_card_rank"
        android:contentDescription="@string/activity_card_rank"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:paddingLeft="-10sp"
        android:paddingTop="16sp"
        android:text="1/200"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/activity_card_qrcode"
        app:layout_constraintTop_toTopOf="@+id/activity_card_demi_right" />

    <TextView
        android:id="@+id/activity_card_level"
        android:contentDescription="@string/activity_card_level"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="8a"
        android:paddingTop="5sp"
        android:textSize="45dp"
        android:textColor="#075E00"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/activity_card_qrcode"
        app:layout_constraintEnd_toStartOf="@+id/activity_card_demi_right"
        app:layout_constraintStart_toEndOf="@+id/activity_card_demi_left"
        app:layout_constraintTop_toTopOf="@+id/activity_card_qrcode"
        app:layout_constraintVertical_bias="0.52" />

    <ImageView
        android:id="@+id/activity_card_image"
        android:contentDescription="@string/activity_card_image"
        android:layout_width="261dp"
        android:layout_height="206dp"
        android:layout_marginTop="242dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_card_back"
        app:srcCompat="@drawable/sierra" />

    <TextView
        android:id="@+id/activity_card_name"
        android:contentDescription="@string/activity_card_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="trop belle pour toi"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/activity_card_image"
        app:layout_constraintTop_toBottomOf="@+id/activity_card_image" />

    <TextView
        android:id="@+id/activity_card_technical"
        android:contentDescription="@string/activity_card_technical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="TextView"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_card_name" />

    <TextView
        android:id="@+id/activity_card_tactical"
        android:contentDescription="@string/activity_card_tactical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/activity_card_technical"
        app:layout_constraintTop_toBottomOf="@+id/activity_card_technical" />

    <TextView
        android:id="@+id/activity_card_mental"
        android:contentDescription="@string/activity_card_mental"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/activity_card_tactical"
        app:layout_constraintTop_toBottomOf="@+id/activity_card_tactical" />

    <TextView
        android:id="@+id/activity_card_physical"
        android:contentDescription="@string/activity_card_physical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/activity_card_mental"
        app:layout_constraintTop_toBottomOf="@+id/activity_card_mental" />

    <ImageView
        android:id="@+id/activity_card_android"
        android:contentDescription="@string/activity_card_android"
        android:layout_width="36dp"
        android:layout_height="293dp"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="430dp"
        app:layout_constraintStart_toEndOf="@+id/activity_card_image"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/android" />

    <ImageView
        android:id="@+id/activity_card_background1"
        android:contentDescription="@string/activity_card_background1"
        android:layout_width="92dp"
        android:layout_height="36dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/activity_card_physical"
        app:layout_constraintTop_toBottomOf="@+id/activity_card_physical"
        app:srcCompat="@drawable/blanc_340_120" />

    <ImageView
        android:id="@+id/activity_card_background2"
        android:contentDescription="@string/activity_card_background2"

        android:layout_width="92dp"
        android:layout_height="36dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/activity_card_background1"
        app:layout_constraintTop_toBottomOf="@+id/activity_card_physical"
        app:srcCompat="@drawable/blanc_340_120" />

    <TextView
        android:id="@+id/activity_card_bonus"
        android:contentDescription="@string/acitvity_card_bonus"
        android:layout_width="93dp"
        android:layout_height="35dp"
        android:text="@string/acitvity_card_bonus"
        app:layout_constraintStart_toStartOf="@+id/activity_card_background1"
        app:layout_constraintTop_toTopOf="@+id/activity_card_background1" />

    <TextView
        android:id="@+id/activity_card_user"
        android:contentDescription="@string/activity_card_user"
        android:layout_width="93dp"
        android:layout_height="35dp"
        android:text="@string/activity_card_user"
        app:layout_constraintStart_toStartOf="@+id/activity_card_background2"
        app:layout_constraintTop_toTopOf="@+id/activity_card_background2" />


</androidx.constraintlayout.widget.ConstraintLayout>