<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firebase.NewFriendActivity">

    <EditText
        android:id="@+id/activity_friend_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="84dp"
        android:autofillHints="@string/activity_climber_detail_first_name"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/activity_friend_first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>

    <EditText
        android:id="@+id/activity_friend_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="152dp"
        android:autofillHints="@string/activity_climber_detail_last_name"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/activity_friend_last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/activity_friend_ask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="84dp"
        android:text="@string/activity_friend_ask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_friend_first_name" />
</androidx.constraintlayout.widget.ConstraintLayout>