<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.user.UserActivity">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/activity_user_edit_text_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/activity_user_first_name" />
        <EditText
            android:id="@+id/activity_user_edit_text_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType=""
            android:hint="@string/activity_user_last_name" />

        <EditText
            android:id="@+id/activity_user_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/activity_user_birdthday"
            android:inputType="date" />

        <EditText
            android:id="@+id/activity_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_user_email"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/activity_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/activity_user_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/activity_user_postal_adress"
            android:inputType="textPostalAddress" />

        <ImageButton
            android:id="@+id/activity_user_button_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/icone_camera" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>