<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.ApiActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="311dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/textview" />

        <CheckBox
            android:id="@+id/acivity_api_checkbox1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/checkbox0" />

        <CheckBox
            android:id="@+id/acivity_api_checkbox2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/checkbox1" />

        <CheckBox
            android:id="@+id/acivity_api_checkbox3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/checkbox2" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>