<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".firebase.FriendDetailsActivity">


    <EditText
        android:id="@+id/activity_friend_detail_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/activity_climber_detail_last_name"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/activity_friend_detail_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/activity_climber_detail_last_name"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/activity_friend_detail_first_name"
        tools:layout_editor_absoluteX="32dp" />

    <EditText
        android:id="@+id/activity_friend_detail_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/activity_friend_detail_user_id"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/activity_friend_detail_last_name"
        tools:layout_editor_absoluteX="32dp" />

    <Button
        android:id="@+id/activity_friend_detail_button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/activity_climber_detail_button_delete"
        app:layout_constraintStart_toEndOf="@+id/activity_friend_detail_button_back"
        app:layout_constraintTop_toBottomOf="@+id/activity_friend_detail_user_id" />

    <Button
        android:id="@+id/activity_friend_detail_button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/activity_climber_detail_button_back"
        app:layout_constraintStart_toEndOf="@+id/activity_friend_detail_button_Update"
        app:layout_constraintTop_toBottomOf="@+id/activity_friend_detail_user_id" />

    <Button
        android:id="@+id/activity_friend_detail_button_Update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/activity_climber_detail_button_update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_friend_detail_user_id" />


</androidx.constraintlayout.widget.ConstraintLayout>